# sitl_ws

./: .gitignore  .gitmodules  .~lock.collected_data.csv#  .~lock.fiducial_transforms_test1_Sony1_1716230651123068094_1716230656123068094.csv#  .~lock.fiducial_transforms_test1_Sony2_1716231234147553443_1716231239147553443.csv#  Camera_Comparison_only.py  Data_Exp 1_60s_2024-06-26_19-38-53.csv  Data_Exp 8i_23s_2024-06-28_21-16-56.csv  README.md  collected_data.csv  collected_data_10s(x-axis motion-cantilever).csv  fiducial_transforms_test1_Sony1_1716229169192218542_1716229174192218542.csv  fiducial_transforms_test1_Sony1_1716229427436478614_1716229432436478614.csv  gedit  index.html  synced_time_differences.csv  synced_time_differences_Camera13_timeDiff_27_0_01ii.csv  timestamp_differences.csv  unsynced_time_differences.csv  unsynced_time_differences_Camera13_timeDiff_27_0_01.csv  unsynced_time_differences_Camera13_timeDiff_27_0_01ii.csv
src/dslr_cam/: CMakeLists.txt  package.xml
src/dslr_cam/config/: sony_cam1_info.yaml  sony_cam2_info.yaml  sony_cam3_info.yaml
src/dslr_cam/launch/: calib.launch  camera.launch  fake_cam.launch  use.launch  use_viewcamera.launch  viewcamera.launch  webcam.launch
src/dslr_cam/msg/: CameraSpecs.msg
src/dslr_cam/node/: cam_sub.py  camera_view.py  camera_view_plus_pose_show.py  dslr_cam_node copy_cpp  dslr_cam_node.cpp  fake_camera_node.py  fake_camera_node_svg_py
src/fast_cam/: CMakeLists.txt  package.xml
src/fast_cam/config/: camera_info_cam2.yaml  camera_info_camera_0.yaml  camera_info_camera_1.yaml  camera_info_camera_2.yaml  (+6 more)
(+1032 files in other folders)
