<?xml version="1.0"?>
<package format="2">
  <name>fast_cam</name>
  <version>0.0.0</version>
  <description>The fast_cam package</description>
  <maintainer email="ammar@todo.todo">ammar</maintainer>

  <license>TODO</license>
  <author email="ammarajmal@cau.ac.kr">Ammar Ajmal</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
  </export>
</package>
